add and fix Swagger, postman